--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/client": "^6.22.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/ui": "^2.8.9",
     "next": "14.2.13",
